--- a/engineer/_themes/_shared/code_styles/fruity.css
+++ b/engineer/_themes/_shared/code_styles/fruity.css
@@ -1,6 +1,7 @@
 .hll { background-color: #333333 }
 .c { color: #008800; font-style: italic; background-color: #0f140f } /* Comment */
 .err { color: #ffffff } /* Error */
+.esc { color: #ffffff } /* Escape */
 .g { color: #ffffff } /* Generic */
 .k { color: #fb660a; font-weight: bold } /* Keyword */
 .l { color: #ffffff } /* Literal */
@@ -47,6 +48,7 @@
 .nv { color: #fb660a } /* Name.Variable */
 .ow { color: #ffffff } /* Operator.Word */
 .w { color: #888888 } /* Text.Whitespace */
+.mb { color: #0086f7; font-weight: bold } /* Literal.Number.Bin */
 .mf { color: #0086f7; font-weight: bold } /* Literal.Number.Float */
 .mh { color: #0086f7; font-weight: bold } /* Literal.Number.Hex */
 .mi { color: #0086f7; font-weight: bold } /* Literal.Number.Integer */
