--- a/engineer/_themes/_shared/code_styles/trac.css
+++ b/engineer/_themes/_shared/code_styles/trac.css
@@ -37,6 +37,7 @@
 .nv { color: #008080 } /* Name.Variable */
 .ow { font-weight: bold } /* Operator.Word */
 .w { color: #bbbbbb } /* Text.Whitespace */
+.mb { color: #009999 } /* Literal.Number.Bin */
 .mf { color: #009999 } /* Literal.Number.Float */
 .mh { color: #009999 } /* Literal.Number.Hex */
 .mi { color: #009999 } /* Literal.Number.Integer */
