--- a/engineer/_themes/_shared/code_styles/github.css
+++ b/engineer/_themes/_shared/code_styles/github.css
@@ -1,5 +1,3 @@
-/* From http://pypi.python.org/pypi/pygments-style-github */
-
 .hll { background-color: #ffffcc }
 .c { color: #999988; font-style: italic } /* Comment */
 .err { color: #a61717; background-color: #e3d2d2 } /* Error */
@@ -26,7 +24,7 @@
 .kr { color: #000000; font-weight: bold } /* Keyword.Reserved */
 .kt { color: #445588; font-weight: bold } /* Keyword.Type */
 .m { color: #009999 } /* Literal.Number */
-.s { color: #d01040 } /* Literal.String */
+.s { color: #dd1144 } /* Literal.String */
 .na { color: #008080 } /* Name.Attribute */
 .nb { color: #0086B3 } /* Name.Builtin */
 .nc { color: #445588; font-weight: bold } /* Name.Class */
@@ -41,20 +39,21 @@
 .nv { color: #008080 } /* Name.Variable */
 .ow { color: #000000; font-weight: bold } /* Operator.Word */
 .w { color: #bbbbbb } /* Text.Whitespace */
+.mb { color: #009999 } /* Literal.Number.Bin */
 .mf { color: #009999 } /* Literal.Number.Float */
 .mh { color: #009999 } /* Literal.Number.Hex */
 .mi { color: #009999 } /* Literal.Number.Integer */
 .mo { color: #009999 } /* Literal.Number.Oct */
-.sb { color: #d01040 } /* Literal.String.Backtick */
-.sc { color: #d01040 } /* Literal.String.Char */
-.sd { color: #d01040 } /* Literal.String.Doc */
-.s2 { color: #d01040 } /* Literal.String.Double */
-.se { color: #d01040 } /* Literal.String.Escape */
-.sh { color: #d01040 } /* Literal.String.Heredoc */
-.si { color: #d01040 } /* Literal.String.Interpol */
-.sx { color: #d01040 } /* Literal.String.Other */
+.sb { color: #dd1144 } /* Literal.String.Backtick */
+.sc { color: #dd1144 } /* Literal.String.Char */
+.sd { color: #dd1144 } /* Literal.String.Doc */
+.s2 { color: #dd1144 } /* Literal.String.Double */
+.se { color: #dd1144 } /* Literal.String.Escape */
+.sh { color: #dd1144 } /* Literal.String.Heredoc */
+.si { color: #dd1144 } /* Literal.String.Interpol */
+.sx { color: #dd1144 } /* Literal.String.Other */
 .sr { color: #009926 } /* Literal.String.Regex */
-.s1 { color: #d01040 } /* Literal.String.Single */
+.s1 { color: #dd1144 } /* Literal.String.Single */
 .ss { color: #990073 } /* Literal.String.Symbol */
 .bp { color: #999999 } /* Name.Builtin.Pseudo */
 .vc { color: #008080 } /* Name.Variable.Class */
