--- a/engineer/_themes/_shared/code_styles/pastie.css
+++ b/engineer/_themes/_shared/code_styles/pastie.css
@@ -9,12 +9,12 @@
 .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
 .ge { font-style: italic } /* Generic.Emph */
 .gr { color: #aa0000 } /* Generic.Error */
-.gh { color: #303030 } /* Generic.Heading */
+.gh { color: #333333 } /* Generic.Heading */
 .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
 .go { color: #888888 } /* Generic.Output */
 .gp { color: #555555 } /* Generic.Prompt */
 .gs { font-weight: bold } /* Generic.Strong */
-.gu { color: #606060 } /* Generic.Subheading */
+.gu { color: #666666 } /* Generic.Subheading */
 .gt { color: #aa0000 } /* Generic.Traceback */
 .kc { color: #008800; font-weight: bold } /* Keyword.Constant */
 .kd { color: #008800; font-weight: bold } /* Keyword.Declaration */
@@ -38,6 +38,7 @@
 .nv { color: #336699 } /* Name.Variable */
 .ow { color: #008800 } /* Operator.Word */
 .w { color: #bbbbbb } /* Text.Whitespace */
+.mb { color: #0000DD; font-weight: bold } /* Literal.Number.Bin */
 .mf { color: #0000DD; font-weight: bold } /* Literal.Number.Float */
 .mh { color: #0000DD; font-weight: bold } /* Literal.Number.Hex */
 .mi { color: #0000DD; font-weight: bold } /* Literal.Number.Integer */
