--- a/engineer/_themes/dark_rainbow/static/stylesheets/_mixins.less
+++ b/engineer/_themes/dark_rainbow/static/stylesheets/_mixins.less
@@ -16,15 +16,12 @@
 }
 
 // MEDIA QUERY VARIABLES
-@small: ~"only screen";
-@small-only: ~"only screen and (max-width: 640px)";
-@medium: ~"only screen and (min-width: 641px)";
-@medium-only: "only screen and (min-width: 641px) and (max-width: 1024px)";
-@large: ~"only screen and (min-width: 1025px)";
-@large-only: ~"only screen and (min-width: 1025px) and (max-width: 1440)";
-@xlarge: ~"only screen and (min-width: 1441px)";
-@xlarge-only: ~"only screen and (min-width: 1441px) and (max-width: 1920px)";
-@xxlarge: ~"only screen and (min-width: 1921px)";
+@small: ~"";
+@small-only: ~"screen and (max-width: 39.9375em)";
+@medium: ~"screen and (min-width: 40em)";
+@medium-only: "screen and (min-width: 40em) and (max-width: 63.9375em)";
+@large: ~"screen and (min-width: 64em)";
+@large-only: ~"screen and (min-width: 64em) and (max-width: 74.9375em)";
 
 .hide-on-phones {
     @media @small-only {
