--- a/engineer/_themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/_themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -1,5 +1,5 @@
 @import "../../../_shared/less/baseline.less";
-@import "_mixins.less";
+@import (reference) "_mixins.less";
 @import (reference) "_colors.less";
 @import (reference) "_typography.less";
 @import "../../../_shared/code_styles/_solarized.less";
@@ -608,7 +608,7 @@ ul.tags {
 // PHONE LAYOUT ADJUSTMENTS //
 //////////////////////////////
 
-@media @medium-only, @small-only {
+@media @small-only {
     header#primary {
         padding-bottom: 0;
         .text-center();
